--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ ul{
 }
 h1,
 h2, 
+h4,
 p{
     padding: 0;
     margin: 0;
@@ -117,7 +118,7 @@ p{
 
 .subsystems_inner{
     max-width: 607px;
-    margin: 0 auto;
+    margin: 0 auto 120px;
 }
 .subsystems__title{
     font-family: 'Inter';
@@ -136,13 +137,16 @@ p{
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: baseline;
+    row-gap: 42px;
 }
-/*.subsystems__item{
+/* .subsystems__item{
     display: flex;
     flex-direction: column;
-}*/
+    align-items: center;
+} */
 .subsystems__img{
     display: block;
+    margin: auto;
 }
 .subsystems__img-title{
     font-family: 'Inter';
@@ -153,4 +157,71 @@ p{
     text-align: center;
     color: #54BAB9;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+/*
+.subsystems__img1{
+    margin-left:41px;
+}
+.subsystems__img-title1{
+    margin-left:31px;
+}
+.subsystems__img2{
+    margin-left:26px;
+    
+}*/
+
+/* footer */
+
+.footer{
+    background: #E9DAC1
+}
+
+.footer__inner{
+    position: relative;
+}
+.footer__person{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+.footer__tools-title,
+.footer__contacts-title{
+    font-family: 'Kaisei Opti';
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 29px;
+    color: #000000;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.footer__tools-title{
+    padding: 20px 0 11px 56px;
+}
+.footer__tools-images{
+    display: flex;
+    padding-left: 43px;
+    justify-content: space-between;
+    max-width: 657px;
+
+}
+.footer__link-text{
+    font-family: 'Inika';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 21px;
+    color: #000000;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.footer__contacts-title{
+    padding: 15px 0 0 56px;
+}
+.footer__contacts-links{
+    padding: 0 0 45px 74px;
+
+}
+.footer__link{
+    display: flex;
+    align-items: center;
+}
+.footer__link-text{
+    padding-left: 10px;
 }
